# pv-diligence

./: README.md  pyproject.toml
docs/demo/: README.md  infrienergy-public-evidence-report.md
docs/reports/: verified-100w-panel-benchmark.md
